# Margadrishti

./: .env.example  .gitignore  DEPLOY.md  README.md  backend_remaining.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.serve  Makefile  README.md  fly.toml  pyproject.toml
backend/infra/: martin.yaml
backend/margadrishti/: __init__.py  scheduler.py  worker.py
backend/margadrishti/api/: app.py  copilot_routes.py  deps.py  models.py  repository.py  repository_postgis.py  routes.py  services.py
backend/margadrishti/context/: compiler.py
backend/margadrishti/copilot/: agent.py  limiter.py  tools.py
backend/margadrishti/core/: celery_app.py  config.py  jobs.py  schemas.py  storage.py
backend/margadrishti/db/: schema.sql  serving.py
backend/margadrishti/features/: build.py
backend/margadrishti/geo/: segments.py
backend/margadrishti/ingestion/: run.py  violations.py
backend/margadrishti/models/: base.py  baselines.py  lightgbm_model.py  self_exciting.py  train.py
backend/margadrishti/optimize/: deployment.py
backend/margadrishti/simulate/: flow.py
backend/parkiq/: __init__.py  scheduler.py  worker.py
backend/parkiq/api/: app.py  copilot_routes.py  deps.py  models.py  repository.py  repository_postgis.py  routes.py  services.py
backend/parkiq/cii/: score.py
backend/parkiq/copilot/: agent.py  tools.py
backend/parkiq/core/: celery_app.py  config.py  jobs.py  storage.py  timeutils.py  (+1 more)
backend/tests/: conftest.py  test_cii_and_optimiser.py  test_config_production.py  test_copilot.py  test_ingestion_pii.py  test_panel_and_models.py  test_repository_api.py  test_simulate_and_context.py  test_timeutils.py
(+38 files in other folders)
